--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "mustache": "^4.0.1",
-    "mustache-express": "^1.3.0"
+    "mustache-express": "^1.3.0",
+    "mysql": "^2.18.1"
   }
 }
