--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.17.1",
     "mustache": "^4.0.1",
     "mustache-express": "^1.3.0",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "request": "^2.88.2"
   }
 }
